--- a/lib/buho_cfdi/locale/es.yml
+++ b/lib/buho_cfdi/locale/es.yml
@@ -73,6 +73,11 @@ es:
     detained:
       tax: Impuesto
       import: Importe
+    transferred:
+      tax: Impuesto
+      factor_type: TipoFactor
+      rate_or_fee: TasaOCuota
+      import: Importe
     
 
 
