CdfiRelated, Issuer and the Receiver params can be build

--- a/lib/buho_cfdi/locale/es.yml
+++ b/lib/buho_cfdi/locale/es.yml
@@ -3,7 +3,7 @@ es:
     receipt:
       version: Version 
       serie: Serie 
-      invoice: Folio 
+      folio_number: Folio
       date: Fecha 
       stamp: Sello 
       payment_method: FormaPago 
