attributes reason and replacement added

--- a/lib/buho_cfdi/locale/es.yml
+++ b/lib/buho_cfdi/locale/es.yml
@@ -166,4 +166,7 @@ es:
       confirmation: Confirmacion
     employment_subsidy:
         subsidy_caused: SubsidioCausado
-
+    uuid:
+      reason: Motivo
+      replacement_uuid: FolioSustituto
+      uuid: UUID
