--- a/lib/buho_cfdi/locale/es.yml
+++ b/lib/buho_cfdi/locale/es.yml
@@ -227,4 +227,7 @@ es:
       factor_type: TipoFactorDR
       rate_or_fee: TasaOCuotaDR
       import: ImporteDR
+    payment_retention:
+      tax: ImpuestoP
+      import: ImporteP
       
