feat: Unified CFDI 4.0 stamping - single process_xml for all types (v0.5.0)

--- a/lib/buho_cfdi/locale/es.yml
+++ b/lib/buho_cfdi/locale/es.yml
@@ -170,6 +170,7 @@ es:
       exchange_rate: TipoCambio 
       total: Total 
       type_of_receipt: TipoDeComprobante 
+      export_code: Exportacion
       payment_method: MetodoPago 
       expedition_place: LugarExpedicion 
       confirmation: Confirmacion
